--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Shared/_Layout.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Shared/_Layout.cshtml
@@ -27,6 +27,14 @@
     @RenderSection("styles", required: false)
 
     <link href='//fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|Roboto:500|Crete+Round:400i' rel='stylesheet' type='text/css' />
+
+    <!--
+    <link href="~/Content/bootstrap.css" rel='stylesheet' type='text/css' />
+    <link href="~/Content/font-awesome.css" rel='stylesheet' type='text/css' />
+    <link href="~/Content/materialdesignicons.css" rel='stylesheet' type='text/css' />
+    <link href="~/Content/ionicons.css" rel='stylesheet' type='text/css' />
+    <link href="~/Content/style.css" rel='stylesheet' type='text/css' />
+    -->
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/cookies")
 </head>
