Excel Export Fix, All View Fix

--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Country/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Country/Index.cshtml
@@ -160,12 +160,12 @@
                             <thead>
                                 <tr>
                                     <th width="5%"></th>
-                                    <th width="17%">@countryName <img id="idSortable1" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableName()" style="width:auto;"></th>
-                                    <th width="17%">@regionName <img id="idSortable2" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableRegionName()" style="width:auto;"></th>
-                                    <th width="17%">@continentName <img id="idSortable3" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableContinentName()" style="width:auto;"></th>
-                                    <th width="17%">@pmiCoding <img id="idSortable4" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortablePmi()" style="width:auto;"></th>
-                                    <th width="17%">@areaCode <img id="idSortable5" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableAreaCode()" style="width:auto;"></th>
-                                    <th width="10%"></th>
+                                    <th width="19%">@countryName <img id="idSortable1" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableName()" style="width:auto;"></th>
+                                    <th width="19%">@regionName <img id="idSortable2" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableRegionName()" style="width:auto;"></th>
+                                    <th width="19%">@continentName <img id="idSortable3" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableContinentName()" style="width:auto;"></th>
+                                    <th width="19%">@pmiCoding <img id="idSortable4" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortablePmi()" style="width:auto;"></th>
+                                    <th width="19%">@areaCode <img id="idSortable5" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableAreaCode()" style="width:auto;"></th>
+                                    <!--<th width="10%"></th>-->
                                 </tr>
                             </thead>
                             <tbody id="SetCountryList"></tbody>
