--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
@@ -168,11 +168,11 @@
                             <thead>
                                 <tr>
                                     <th width="5%"></th>
-                                    <th width="21,5%">@countryName <img id="idSortable1" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableName()" style="width:auto;"></th>
-                                    <th width="21,5%">@year <img id="idSortable2" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableYear()" style="width:auto;"></th>
-                                    <th width="21,5%">@value <img id="idSortable3" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableValue()" style="width:auto;"></th>
-                                    <th width="21,5%">@notes <img id="idSortable4" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableNotes()" style="width:auto;"></th>
-                                    <th width="11%"></th>
+                                    <th width="23,75%">@countryName <img id="idSortable1" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableName()" style="width:auto;"></th>
+                                    <th width="23,75%">@year <img id="idSortable2" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableYear()" style="width:auto;"></th>
+                                    <th width="23,75%">@value <img id="idSortable3" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableValue()" style="width:auto;"></th>
+                                    <th width="23,75%">@notes <img id="idSortable4" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableNotes()" style="width:auto;"></th>
+                                    <!--<th width="11%"></th>-->
                                 </tr>
                             </thead>
                             <tbody id="SetCurrencyList"></tbody>
