--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
@@ -141,12 +141,12 @@
                             <thead>
                                 <tr>
                                     <th width="5%"></th>
-                                    <th width="17%">@variableName <img id="idSortable1" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableName()" style="width:auto;"></th>
-                                    <th width="17%">@phaseCode <img id="idSortable2" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortablePhaseCode()" style="width:auto;"></th>
-                                    <th width="17%">@phaseName <img id="idSortable3" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortablePhaseName()" style="width:auto;"></th>
-                                    <th width="17%">@varLc <img id="idSortable4" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableVarLc()" style="width:auto;"></th>
-                                    <th width="17%">@unitName <img id="idSortable5" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableUnitName()" style="width:auto;"></th>
-                                    <th width="10%"></th>
+                                    <th width="19%">@variableName <img id="idSortable1" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableName()" style="width:auto;"></th>
+                                    <th width="19%">@phaseCode <img id="idSortable2" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortablePhaseCode()" style="width:auto;"></th>
+                                    <th width="19%">@phaseName <img id="idSortable3" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortablePhaseName()" style="width:auto;"></th>
+                                    <th width="19%">@varLc <img id="idSortable4" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableVarLc()" style="width:auto;"></th>
+                                    <th width="19%">@unitName <img id="idSortable5" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableUnitName()" style="width:auto;"></th>
+                                    <!--<th width="10%"></th>-->
                                 </tr>
                             </thead>
                             <tbody id="SetVariableList"></tbody>
