Excel Export and Import Fix

--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Excel/Import.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Excel/Import.cshtml
@@ -97,7 +97,7 @@
 
             swal({
                 title: "Do you want replace this Value?",
-                text: "Nomisma Code: " + obj[i].NomismaCode + "\nVariable Number: " + obj[i].Number + "\nCountry Code: " + obj[i].CountryCode + "\nYear: " + obj[i].Year + "\nOld Data: " + obj[i].Data + "\nNew Data: " + obj[i + 1].Data,
+                text: "Nomisma Code: " + obj[i].NomismaCode + "\nVariable Number: " + obj[i].Number + "\nCountry Code: " + obj[i].CountryCode + "\nYear: " + obj[i].Year + "\nOld Data: " + obj[i].Data + "\nNew Data: " + obj[i + 1].Data + "\nOld Data Us: " + obj[i].DataUs + "\nNew Data Us: " + obj[i + 1].DataUs + "\nOld Source Name: " + obj[i].Name + "\nNew Source Name: " + obj[i + 1].Name + "\nOld Repository: " + obj[i].Repository + "\nNew Repository: " + obj[i + 1].Repository + "\nOld Username: " + obj[i].Username + "\New Username: " + obj[i + 1].Username,
                 type: "warning",
                 showCancelButton: true,
                 confirmButtonClass: 'btn-warning',
