--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Value/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Value/Index.cshtml
@@ -234,7 +234,7 @@
                                     <th width="11%">@countryName <img id="idSortable1" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableName()" style="width:auto;"></th>
                                     <th width="11%">@variableName <img id="idSortable2" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableVariableName()" style="width:auto;"></th>
                                     <th width="11%">@data <img id="idSortable3" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableData()" style="width:auto;"></th>
-                                    <th width="11%">@dataUs</th>
+                                    <th width="11%">@dataUs <img id="idSortable7" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableDataUs()" style="width:auto;"></th>
                                     <th width="11%">@year <img id="idSortable4" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableYear()" style="width:auto;"></th>
                                     <th width="11%">@exchangeRateUs</th>
                                     <th width="11%">@publicNotes <img id="idSortable5" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortablePublicNotes()" style="width:auto;"></th>
