Fix COlumn Length, ER Model and Value MVC

--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Admin/Grant.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Admin/Grant.cshtml
@@ -68,7 +68,7 @@
                     <th width="50%">Grant</th>
                 </tr>
             </thead>
-            <tbody id="SetUserList"></tbody>
+            <tbody id="SetUserList" class='tableFix'></tbody>
             <tr id="LoadingStatus"></tr>
         </table>
     </div>
