--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Country/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Country/Index.cshtml
@@ -168,7 +168,7 @@
                                     <!--<th width="10%"></th>-->
                                 </tr>
                             </thead>
-                            <tbody id="SetCountryList"></tbody>
+                            <tbody id="SetCountryList" class='tableFix'></tbody>
                             <tr id="LoadingStatus"></tr>
                         </table>
                     </div>
