--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
@@ -175,7 +175,7 @@
                                     <!--<th width="11%"></th>-->
                                 </tr>
                             </thead>
-                            <tbody id="SetCurrencyList"></tbody>
+                            <tbody id="SetCurrencyList" class='tableFix'></tbody>
                             <tr id="LoadingStatus"></tr>
                         </table>
                     </div>
