--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Source/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Source/Index.cshtml
@@ -182,7 +182,7 @@
                                     <th width="10%">Source File</th>
                                 </tr>
                             </thead>
-                            <tbody id="SetSourceList"></tbody>
+                            <tbody id="SetSourceList" class='tableFix'></tbody>
                             <tr id="LoadingStatus"></tr>
                         </table>
                     </div>
