--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
@@ -149,7 +149,7 @@
                                     <!--<th width="10%"></th>-->
                                 </tr>
                             </thead>
-                            <tbody id="SetVariableList"></tbody>
+                            <tbody id="SetVariableList" class='tableFix'></tbody>
                             <tr id="LoadingStatus"></tr>
                         </table>
                     </div>
