--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Content/style.css
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Content/style.css
@@ -4526,3 +4526,13 @@ select.form-control + .chosen-container-multi .chosen-results li.result-selected
 /*.dropdownTable {
     position: static;
 }*/
+
+.tableFix {
+    overflow: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+}
+
+.rowFix {
+    min-width: 200px;
+}
