--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Value/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Value/Index.cshtml
@@ -50,9 +50,18 @@
     string internalNotes = StaticName.InternalNotes();
     string publicNotes = StaticName.PublicNotes();
     string nomismaCode = StaticName.NomismaCode();
+    string sourceName = StaticName.SourceName();
+    string sourceLink = StaticName.Link();
+    string sourceRepository = StaticName.Repository();
+    string sourceDateDownload = StaticName.DownloadDate();
+    string sourceUsername = StaticName.UserName();
 
     StringLengthAttribute publicNotesLenAttr = typeof(TobaccoNicotineApplication.Models.Value).GetProperty("PublicNotes").GetCustomAttributes(typeof(StringLengthAttribute), false).Cast<StringLengthAttribute>().SingleOrDefault();
     StringLengthAttribute internalNotesLenAttr = typeof(TobaccoNicotineApplication.Models.Value).GetProperty("InternalNotes").GetCustomAttributes(typeof(StringLengthAttribute), false).Cast<StringLengthAttribute>().SingleOrDefault();
+    StringLengthAttribute linkLenAttr = typeof(TobaccoNicotineApplication.Models.Source).GetProperty("Link").GetCustomAttributes(typeof(StringLengthAttribute), false).Cast<StringLengthAttribute>().SingleOrDefault();
+    StringLengthAttribute sourceNameLenAttr = typeof(TobaccoNicotineApplication.Models.Source).GetProperty("Name").GetCustomAttributes(typeof(StringLengthAttribute), false).Cast<StringLengthAttribute>().SingleOrDefault();
+    StringLengthAttribute sourceUsernameLenAttr = typeof(TobaccoNicotineApplication.Models.Source).GetProperty("Username").GetCustomAttributes(typeof(StringLengthAttribute), false).Cast<StringLengthAttribute>().SingleOrDefault();
+    StringLengthAttribute sourceRepositoryLenAttr = typeof(TobaccoNicotineApplication.Models.Source).GetProperty("Repository").GetCustomAttributes(typeof(StringLengthAttribute), false).Cast<StringLengthAttribute>().SingleOrDefault();
 
     string serverMap = System.Web.HttpContext.Current.Server.MapPath("~/Uploads/Sources/");
 }
@@ -230,19 +239,24 @@
                         <table class="table table-hover">
                             <thead>
                                 <tr>
-                                    <th width="5%"></th>
-                                    <th width="11%">@countryName <img id="idSortable1" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableName()" style="width:auto;"></th>
-                                    <th width="11%">@variableName <img id="idSortable2" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableVariableName()" style="width:auto;"></th>
-                                    <th width="11%">@data <img id="idSortable3" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableData()" style="width:auto;"></th>
-                                    <th width="11%">@dataUs <img id="idSortable7" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableDataUs()" style="width:auto;"></th>
-                                    <th width="11%">@year <img id="idSortable4" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableYear()" style="width:auto;"></th>
-                                    <th width="11%">@exchangeRateUs</th>
-                                    <th width="11%">@publicNotes <img id="idSortable5" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortablePublicNotes()" style="width:auto;"></th>
-                                    <th width="11%">@internalNotes <img id="idSortable6" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableInternalNotes()" style="width:auto;"></th>
-                                    <th width="7%">Source File</th>
+                                    <th width="6%"></th>
+                                    <th width="6%">@countryName <img id="idSortable1" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableName()" style="width:auto;"></th>
+                                    <th width="6%">@variableName <img id="idSortable2" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableVariableName()" style="width:auto;"></th>
+                                    <th width="6%">@data <img id="idSortable3" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableData()" style="width:auto;"></th>
+                                    <th width="6%">@dataUs <img id="idSortable7" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableDataUs()" style="width:auto;"></th>
+                                    <th width="6%">@year <img id="idSortable4" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableYear()" style="width:auto;"></th>
+                                    <th width="6%">@exchangeRateUs</th>
+                                    <th width="6%">@publicNotes <img id="idSortable5" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortablePublicNotes()" style="width:auto;"></th>
+                                    <th width="6%">@internalNotes <img id="idSortable6" src="~/Images/Sortable/bg.png" alt="bg" onclick="SortableInternalNotes()" style="width:auto;"></th>
+                                    <th width="6%">@sourceName</th>
+                                    <th width="6%">@sourceLink</th>
+                                    <th width="6%">@sourceRepository</th>
+                                    <th width="6%">@sourceDateDownload</th>
+                                    <th width="6%">@sourceUsername</th>
+                                    <th width="6%">Source File</th>
                                 </tr>
                             </thead>
-                            <tbody id="SetValueList"></tbody>
+                            <tbody id="SetValueList" class='tableFix'></tbody>
                             <tr id="LoadingStatus"></tr>
                         </table>
                     </div>
@@ -462,13 +476,153 @@
 
         var publicNotesMax = '@publicNotesLenAttr.MaximumLength';
         var internalNotesMax = '@internalNotesLenAttr.MaximumLength';
+        var linkMax = '@linkLenAttr.MaximumLength';
+        var usernameMin = '@sourceUsernameLenAttr.MinimumLength';
+        var usernameMax = '@sourceUsernameLenAttr.MaximumLength';
+        var repositoryMax = '@sourceRepositoryLenAttr.MaximumLength';
 
         var data = '@data';
         var dataUs = '@dataUs';
         var publicNotes = '@publicNotes';
         var internalNotes = '@internalNotes';
+        var sourceName = '@sourceName';
+        var sourceLink = '@sourceLink';
+        var sourceUsername = '@sourceUsername';
+        var sourceDateDownload = '@sourceDateDownload';
 
         var serverMap = '@Html.Raw(HttpUtility.JavaScriptStringEncode(serverMap))';
+        var myUsername = '@User.Identity.Name';
+
+        // inserisco gli elementi nella table
+        function DataBind(ValueList) {
+
+            $("#LoadingStatus").html("Loading....");
+
+            var SetData = $("#SetValueList");
+            for (var i = 0; i < ValueList.length; i++) {
+
+                var Data = "<tr class='row_" + ValueList[i].CountryCode + "_" + ValueList[i].Year + "_" + ValueList[i].Number + "'>";
+
+                if (boolAdmin || boolWriter) {
+                    Data = Data + "<td>" + "<div class=\"checkbox checkbox-primary checkbox-single checkBoxZoom\"><input name=\"foo2\" type=\"checkbox\"><label></label></div>" + "</td>"
+                        + "<td>" + ValueList[i].CountryName + "</td>"
+                        + "<td>" + ValueList[i].VariableName + "</td>"
+                        + "<td>" + "<input id=\"DataTable" + i + "\"" + "class=\"form-control rowFix\" type=\"textbox\" value=\"" + ((typeof ValueList[i].Data == 'number') ? parseFloat(ValueList[i].Data).toFixed(1) : ValueList[i].Data) + "\" placeholder=\"Insert " + data + "\" onkeypress=\"saveRow(event, 0, '" + ValueList[i].CountryCode + "', '" + ValueList[i].Number + "', " + ValueList[i].Year + ", " + ValueList[i].VarLc + ", DataTable" + i + ")\" >" + "</td>";
+
+                    if (ValueList[i].VarLc == true)
+                        Data = Data + "<td>" + "<input id=\"DataUsTable" + i + "\"" + "class=\"form-control rowFix\" type=\"textbox\" value=\"" + ((typeof ValueList[i].DataUs == 'number') ? parseFloat(ValueList[i].DataUs).toFixed(1) : ValueList[i].DataUs) + "\" placeholder=\"Insert " + dataUs + "\" onkeypress=\"saveRow(event, 1, '" + ValueList[i].CountryCode + "', '" + ValueList[i].Number + "', " + ValueList[i].Year + ", " + ValueList[i].VarLc + ", DataUsTable" + i + ")\" >" + "</td>";
+                    else
+                        Data = Data + "<td id=\"DataUsTable>\"" + "</td>";
+
+                    Data = Data + "<td>" + ValueList[i].Year + "</td>";
+
+                    if (ValueList[i].VarLc == true)
+                        Data = Data + "<td>" + ValueList[i].CurrencyValue + "</td>";
+                    else
+                        Data = Data + "<td>" + "</td>";
+
+                    Data = Data
+                        + "<td>" + "<input id=\"PublicNotesTable" + i + "\"" + "class=\"form-control rowFix\" maxlength=" + publicNotesMax + " type=\"textbox\" value=\"" + ValueList[i].PublicNotes + "\" placeholder=\"Insert " + publicNotes + "\" onkeypress=\"saveRow(event, 2, '" + ValueList[i].CountryCode + "', '" + ValueList[i].Number + "', " + ValueList[i].Year + ", " + ValueList[i].VarLc + ", PublicNotesTable" + i + ")\" >" + "</td>"
+                        + "<td>" + "<input id=\"InternalNotesTable" + i + "\"" + "class=\"form-control rowFix\"  maxlength=" + internalNotesMax + " type=\"textbox\" value=\"" + ValueList[i].InternalNotes + "\" placeholder=\"Insert " + internalNotes + "\" onkeypress=\"saveRow(event, 3, '" + ValueList[i].CountryCode + "', '" + ValueList[i].Number + "', " + ValueList[i].Year + ", " + ValueList[i].VarLc + ", InternalNotesTable" + i + ")\" >" + "</td>";
+
+                } else {
+                    Data = Data + "<td>" + "<div class=\"checkbox checkbox-primary checkbox-single checkBoxZoom\"><input name=\"foo2\" type=\"checkbox\"><label></label></div>" + "</td>" +
+                        "<td>" + ValueList[i].CountryName + "</td>" +
+                        "<td>" + ValueList[i].VariableName + "</td>" +
+                        "<td>" + ValueList[i].Data + "</td>" +
+                        "<td>" + ValueList[i].DataUs + "</td>" +
+                        "<td>" + ValueList[i].Year + "</td>" +
+                        "<td>" + ValueList[i].CurrencyValue + "</td>" +
+                        "<td>" + ValueList[i].PublicNotes + "</td>" +
+                        "<td>" + ValueList[i].InternalNotes + "</td>";
+                }
+
+                /*Data = Data + "<td>" +
+                    "<div class=\"dropdown\">" +
+                    "<button class=\"btn btn-primary dropdown-toggle\" type=\"button\" id=\"about-us\" data-toggle=\"dropdown\" aria-haspopup=\"true\" aria-expanded=\"false\">" +
+                    "Search" +
+                    "<span class=\"caret\"></span></button>" +
+                    "<ul class=\"dropdown-menu dropdownTable\" aria-labelledby=\"about-us\">" +
+                    "<li><a href=\"#\">Currency</a></li>" +
+                    "<li><a href=\"#\">Sources</a></li>" +
+                    "</ul>" +
+                    "</div>" + "</td>";*/
+
+                //Data = Data + "<td>";
+
+                //if ((boolAdmin || boolWriter)) {
+                //    if (ValueList[i].IsSource == false) {
+                //        Data = Data +
+                //            "<input type='file' id='filestyle-0' tabindex='-1' style='position: absolute; clip: rect(0px, 0px, 0px, 0px);'><span class='group-span-filestyle ' tabindex='0'><label for='filestyle-0' class='btn btn-sm btn-default '><span class='icon-span-filestyle glyphicon glyphicon-folder-open'></span> </label></span>";
+                //    }
+                //}
+
+                if (ValueList[i].Sources == null) {
+                    Data = Data + "<td>" + "<input id=\"SourceNameTable" + i + "\"" + "class=\"form-control rowFix\" maxlength=" + linkMax + " type=\"textbox\" value=\"null\" placeholder=\"Insert " + sourceName + "*\" onkeypress=\"saveRow(event, 4, '" + ValueList[i].CountryCode + "', '" + ValueList[i].Number + "', " + ValueList[i].Year + ", " + ValueList[i].VarLc + ", SourceNameTable" + i + ")\" >" + "</td>"
+                        + "<td>" + "<input id=\"SourceLinkTable" + i + "\"" + "class=\"form-control rowFix\" maxlength=" + linkMax + " type=\"textbox\" value=\"null\" placeholder=\"Insert " + sourceLink + "*\" onkeypress=\"saveRow(event, 5, '" + ValueList[i].CountryCode + "', '" + ValueList[i].Number + "', " + ValueList[i].Year + ", " + ValueList[i].VarLc + ", SourceLinkTable" + i + ")\" >" + "</td>"
+                        + "<td><select id=\"selectRepository" + i + "\" class=\"form-control rowFix\" ></select></td>"
+                        + "<td>" + "<input id=\"DateDownloadTable" + i + "\"" + "class=\"form-control rowFix\" maxlength=10 type=\"textbox\" value=\"null\" placeholder=\"Insert " + sourceDateDownload + "*\" onkeypress=\"saveRow(event, 6, '" + ValueList[i].CountryCode + "', '" + ValueList[i].Number + "', " + ValueList[i].Year + ", " + ValueList[i].VarLc + ", DateDownloadTable" + i + ")\" >" + "</td>"
+                        + "<td>" + "<input id=\"SourceUsernameTable" + i + "\"" + "class=\"form-control rowFix\" maxlength=" + usernameMax + " type=\"textbox\" value=\"null\" placeholder=\"Insert " + sourceUsername + "*\" onkeypress=\"saveRow(event, 7, '" + ValueList[i].CountryCode + "', '" + ValueList[i].Number + "', " + ValueList[i].Year + ", " + ValueList[i].VarLc + ", SourceUsernameTable" + i + ")\" >" + "</td>"
+                        + "<td>" + "</td>";
+                } else {
+
+                    if (ValueList[i].Repository != null) {
+                        Data = Data +
+                            "<td>" + "<a target=\"_blank\" rel=\"noopener noreferrer\" href='" + serverMap + ValueList[i].Link + "' class='btn btn-dark btn-sm waves-effect'><span class='glyphicon glyphicon-file'></span></a>" + "</td>";
+                    } else {
+                        Data = Data +
+                            "<td>" + "</td>";
+                    }
+
+                }
+
+                //Data = Data + "</td>"
+
+                Data = Data + "</tr>";
+
+                SetData.append(Data);
+
+                // aggiungo caratteri campo
+                $('input#PublicNotesTable' + i).maxlength({
+                    alwaysShow: true,
+                    placement: 'top-left'
+                });
+
+                $('input#InternalNotesTable' + i).maxlength({
+                    alwaysShow: true,
+                    placement: 'top-left'
+                });
+
+                $('input#SourceNameTable' + i).maxlength({
+                    alwaysShow: true,
+                    placement: 'top-left'
+                });
+
+                $('input#SourceLinkTable' + i).maxlength({
+                    alwaysShow: true,
+                    placement: 'top-left'
+                });
+
+                $('input#selectRepository' + i).maxlength({
+                    alwaysShow: true,
+                    placement: 'top-left'
+                });
+
+                $('input#DateDownloadTable' + i).maxlength({
+                    alwaysShow: true,
+                    placement: 'top-left'
+                });
+
+                $('input#SourceUsernameTable' + i).maxlength({
+                    alwaysShow: true,
+                    placement: 'top-left'
+                });
+            }
+
+            $("#LoadingStatus").html(" ");
+            var page = $("#showEntry").val();
+            $('#SetValueList').pageMe({ pagerSelector: '#myPager', showPrevNext: true, hidePageNumbers: false, perPage: parseInt(page) });
+        }
     </script>
 
     @Scripts.Render("~/Scripts/value")
