Export and Import Lines Fix

--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Excel/Export.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Excel/Export.cshtml
@@ -175,11 +175,11 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td>Country_code</td>
+                            <td>PMI_coding</td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td>PMI_coding</td>
+                            <td>Country_code</td>
                         </tr>
                         <tr>
                             <td></td>
@@ -235,6 +235,10 @@
                         </tr>
                         <tr>
                             <td></td>
+                            <td>Access or download date</td>
+                        </tr>
+                        <tr>
+                            <td></td>
                             <td>Exchange_Rate_US$</td>
                         </tr>
                         <tr>
@@ -256,10 +260,6 @@
                         <tr>
                             <td></td>
                             <td>CHI ha inserito/modificato il dato</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>collection date (consultation or download)</td>
                         </tr>
                         <tr>
                             <td></td>
